--- a/en-us/get-quote/index.html
+++ b/en-us/get-quote/index.html
@@ -70,6 +70,13 @@
 </head>
 
 <body class="body-2">
+    <div style="position: fixed;top:60px;left:0;right:0;height: 30px; background: #f6b02dd9;text-align: center;z-index: 10000;">
+    <p style="color: #000;font-weight: 600;font-family: Manrope, sans-serif;font-size: 14px;">
+      SentryBox has been discontinued. Thank you for being part of the journey — <a href="/en-us/blog-saying-goodbye/">learn more in our blog post</a>
+    </p>
+
+  </div>
+
   <div id="section-contact" class="sectioncontact-copy wide purple">
     <div class="div-block-19">
       <div class="w-layout-blockcontainer container-26-copy w-container">
