--- a/index.html
+++ b/index.html
@@ -1310,14 +1310,14 @@
             });
         </script>
     </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
+    <script src="/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="/img/js/webflow.schunk.36b8fb49256177c8.js"
+    <script src="/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
-    <script src="/img/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
+    <script src="/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
         type="text/javascript"></script>
-    <script src="https://hubspotonwebflow.com/assets/js/form-124.js" type="text/javascript"
+    <script src="/js/form-124.js" type="text/javascript"
         integrity="sha384-bjyNIOqAKScdeQ3THsDZLGagNN56B4X2Auu9YZIGu+tA/PlggMk4jbWruG/P6zYj"
         crossorigin="anonymous"></script>
 </body><iframe
