--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
 
 <body data-scroll-time="0.4" class="body">
 
-      <div style="position: fixed;top:60px;left:0;right:0;height: 30px; background: #f6b02dd9;text-align: center;z-index: 10000;">
-    <p style="color: #000;font-weight: 600;font-family: Manrope, sans-serif;font-size: 14px;">
+      <div style="position: fixed;top:60px;left:0;right:0; background: #f6b02dd9;text-align: center;z-index: 10000;">
+    <p style="color: #000;font-weight: 600;font-family: Manrope, sans-serif;font-size: 14px;margin:0;padding: 10px;line-height: 1.5;">
       SentryBox has been discontinued. Thank you for being part of the journey — <a href="/en-us/blog-saying-goodbye/">learn more in our blog post</a>
     </p>
 
