--- a/en-us/blog-how-do-honeypots-help-secure-your-network/index.html
+++ b/en-us/blog-how-do-honeypots-help-secure-your-network/index.html
@@ -51,12 +51,11 @@
 </head>
 
 <body>
-    <div style="position: fixed;top:60px;left:0;right:0;height: 30px; background: #f6b02dd9;text-align: center;z-index: 10000;">
-    <p style="color: #000;font-weight: 600;font-family: Manrope, sans-serif;font-size: 14px;">
-      SentryBox has been discontinued. Thank you for being part of the journey — <a href="/en-us/blog-saying-goodbye/">learn more in our blog post</a>
-    </p>
-
-  </div>
+    <div style="position: fixed;top:60px;left:0;right:0; background: #f6b02dd9;text-align: center;z-index: 10000;">
+        <p style="color: #000;font-weight: 600;font-family: Manrope, sans-serif;font-size: 14px;margin:0;padding: 10px;line-height: 1.5;">
+        SentryBox has been discontinued. Thank you for being part of the journey — <a href="/en-us/blog-saying-goodbye/">learn more in our blog post</a>
+        </p>
+    </div>
 
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navbar w-nav">
