- Fixed issue on css files

--- a/en-us/datenschutz/index.html
+++ b/en-us/datenschutz/index.html
@@ -18,7 +18,7 @@
   <meta content="Datenschutz" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link
-    href="/img/css/sentrybox.webflow.shared.069cc7328.min.css"
+    href="/css/sentrybox.webflow.shared.069cc7328.min.css"
     rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
