--- a/en-us/faq/index.html
+++ b/en-us/faq/index.html
@@ -23,7 +23,7 @@
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link
-    href="/img/css/sentrybox.webflow.shared.069cc7328.min.css"
+    href="/css/sentrybox.webflow.shared.069cc7328.min.css"
     rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
