Added good bye post

--- a/en-us/blog-saying-goodbye/index.html
+++ b/en-us/blog-saying-goodbye/index.html
@@ -10,18 +10,18 @@
     }
   </style>
   <meta charset="utf-8">
-  <title>Blog - Look at what it can do</title>
+  <title>Blog - Saying GoodBye</title>
   <link rel="alternate" hreflang="x-default" href="https://www.sentrybox.io/blog-look-at-what-it-can-do">
   <link rel="alternate" hreflang="de-DE" href="https://www.sentrybox.io/blog-look-at-what-it-can-do">
   <link rel="alternate" hreflang="en-US" href="https://www.sentrybox.io/en-us/blog-look-at-what-it-can-do">
   <meta
     content="Lets imagine what the product could look like?&nbsp;What technologies do we use and what features are we expecting from an interactive HoneyPot?"
     name="description">
-  <meta content="Blog - Look at what it can do" property="og:title">
+  <meta content="Blog - Saying GoodBye" property="og:title">
   <meta
     content="Lets imagine what the product could look like?&nbsp;What technologies do we use and what features are we expecting from an interactive HoneyPot?"
     property="og:description">
-  <meta content="Blog - Look at what it can do" property="twitter:title">
+  <meta content="Blog - Saying GoodBye" property="twitter:title">
   <meta
     content="Lets imagine what the product could look like?&nbsp;What technologies do we use and what features are we expecting from an interactive HoneyPot?"
     property="twitter:description">
@@ -88,14 +88,14 @@
       <div class="w-layout-blockcontainer blog-list-entry w-container">
         <h2 data-w-id="5c98dc7a-9eca-ac0e-1d14-e9a123badc59"
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
-          class="blog-list-headline">Look at what it can do!<br>Defining the product idea.</h2>
+          class="blog-list-headline">Saying GoodBye to SentryBox</h2>
         <div data-w-id="ca53b414-6769-96d4-3ee9-63cba5e3a50a"
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
           class="w-layout-blockcontainer blog-sub-info w-container"><img
             src="/img/65fc0ea852fd7a3bbd8dc308_Avatar_Small_1_500px_ZoomedOut.jpg"
             loading="lazy" alt="Benjamin Krüger" class="blog-author-image">
           <div class="blog-author-name">Benjamin&nbsp;Krüger</div>
-          <div class="blog-date">January 03, 2024</div>
+          <div class="blog-date">January 12, 2026</div>
         </div><img class="blog-image"
           src="/img/66a4eae5cfe90fbd90622650_Infrastructure.jpg"
           alt="SentryBox Tech"
@@ -103,56 +103,59 @@
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="0167e223-aabd-1b06-d582-ec5ca2a92365" loading="lazy"
           srcset="/img/66a4eae5cfe90fbd90622650_Infrastructure-p-500.jpg 500w, /img/66a4eae5cfe90fbd90622650_Infrastructure-p-800.jpg 800w, /img/66a4eae5cfe90fbd90622650_Infrastructure-p-1080.jpg 1080w, /img/66a4eae5cfe90fbd90622650_Infrastructure.jpg 1440w">
-        <p data-w-id="5c98dc7a-9eca-ac0e-1d14-e9a123badc5d"
-          style="transform: translate3d(0px, 40px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 0; transform-style: preserve-3d;"
-          class="blog-list-text">Coming up with an idea and transforming it into a finished product is always a long
-          journey. So, we just have to start somewhere! First of all, I am thinking about what the ideal product would
-          be like.<br>‍<br>In my mind, it’s a plug-and-play device that mimics actual devices in the
-          network.<br>‍<br><strong class="bold-text-18">What do we need to make that happen?<br>‍</strong><br>Coffee. We
-          need lots of coffee to work through our product development phase. We will first look at the software since
-          that’s the core of any device. Let’s break it down into two areas:<br><strong class="bold-text-22">‍<br>1.
-            Software running on the device</strong><br></p><img class="blog-image"
-          src="/img/66a4d9927cd8e3b30b9ded9d_Features%20Brainstorming.png"
-          alt=""
-          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
-          sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
-          data-w-id="816b46f7-39fe-8c0e-a6cb-10832af83f7c" loading="lazy"
-          srcset="/img/66a4d9927cd8e3b30b9ded9d_Features%20Brainstorming-p-500.png 500w, /img/66a4d9927cd8e3b30b9ded9d_Features%20Brainstorming-p-800.png 800w, /img/66a4d9927cd8e3b30b9ded9d_Features%20Brainstorming-p-1080.png 1080w, /img/66a4d9927cd8e3b30b9ded9d_Features%20Brainstorming.png 1324w">
+       
         <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
           style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
-          class="blog-list-text"><strong>Choosing the Operating System</strong><br>The device needs an operating system!
-          There are many choices when it comes to selecting one. After reviewing the current state of the art, it’s
-          clear that Ubuntu Server is still the most popular choice. It’s robust, has long-term support, can run on
-          almost any device, and is designed to operate without reboots for months on end.<br><br>For the software
-          running on the device, the code will be split into two applications.<br><br><strong>1. Device Manager
-            -&nbsp;Baby sitting the device</strong><br>The first application will be the device manager. It simply does
-          what it says: managing the device. Anything from software updates and configuration changes to reboots will be
-          handled by this part of the software.<br><br><strong>2. HoneyPot&nbsp;Service - The
-            REAL&nbsp;TRAP</strong><br>Any attacker that comes along will have to deal with the constantly changing
-          honeypot service. The SentryBox will mimic devices as completely as possible to lure hackers into the trap.
-          This includes various services like SSH, FTP, HTTP, etc., as well as detecting NMAP scans. This part of the
-          software will also be responsible for sending alerts.<br></p><img class="blog-image"
-          src="/img/66a4da32e537143874ee7e14_Backend%20Features.png"
-          alt=""
-          style="transform: translate3d(0px, 1.25px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
-          sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
-          data-w-id="f69591b5-eb06-9fb4-48fc-8ea286c2602d" loading="lazy"
-          srcset="/img/66a4da32e537143874ee7e14_Backend%20Features-p-500.png 500w, /img/66a4da32e537143874ee7e14_Backend%20Features-p-800.png 800w, /img/66a4da32e537143874ee7e14_Backend%20Features-p-1080.png 1080w, /img/66a4da32e537143874ee7e14_Backend%20Features.png 1415w">
-        <p data-w-id="df400771-5b86-d2c6-6988-8d3718779995"
-          style="transform: translate3d(0px, 1.25px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
-          class="blog-list-text"><strong class="bold-text-23">2. The backend/server application for
-            management</strong><br><br>In past projects, we were fortunate to use AWS and gained valuable experience
-          with that infrastructure. I know it’s expensive, but reliability and security are the top priorities for the
-          SentryBox. We already know how to set up security-relevant options like API Gateways, security groups, and IAM
-          access. Additionally, we have scaled with AWS far beyond our traffic expectations for the
-          SentryBox.<br><br><strong>We are strong believers in self-service</strong><br><br>The admin panel ensures that
-          users can reconfigure the SentryBox at any time, change configurations on the go, and stay aware of the
-          current state. Self-service is instant and does not rely on any third party. Whether they want to change out a
-          device on Sunday at 2 a.m. on New Year’s Eve—no problem, it’s done!<br><br>Besides managing the SentryBox,
-          alerts and uptimes need to be displayed. If a SentryBox is down multiple times a month, there might be an
-          issue with the customer's network connectivity as a whole, or someone might already be undetected in the
-          network.<br><br><strong class="bold-text-24">Enough thoughts for today. We now have an overview of what the
-            product should be able to do.</strong><br><br><br>‍<br></p>
+          class="blog-list-text">
+          
+            At some point, moving on becomes the <strong>right thing to do</strong>.
+        </p>
+                <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            SentryBox has been a long climb with steep ups and downs. Over the past two years, we built an amazingly simple-to-use cybersecurity hardware product. Unfortunately, that’s no longer what the market demands.
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            The cybersecurity landscape has evolved toward SIEMs, cloud-based solutions, and highly sophisticated data analytics. The niche we thought we had discovered simply doesn’t exist anymore. Sometimes products come too early — sometimes too late. In our case, <strong>we were too late</strong>.
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            A trap for hackers that could be set up within minutes, offering visibility into potential cyberattacks without being intrusive to the rest of the network architecture, might have been a perfect product-market fit a few years ago.
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            <strong>Still, the journey has been incredible.</strong>
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            We learned how to design devices, build hardware, get certifications, develop locally running Linux software, create packaging, set up infrastructure and maintenance pipelines, fake TCP stacks, and run decoy services. It has been a true wow experience.
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            I want to say <strong>thank you to all our early supporters, beta customers, and partners</strong> who were willing to give us a chance. Trusting a newcomer is never easy — and you did it anyway. I will always be grateful for that opportunity.
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            A very special thanks to my founder associate <a href="https://www.linkedin.com/in/simon-moschek-411218222/">Simon Moschek</a>, who was there every step of the way and helped turn this vision into reality. A special thanks as well to <a href="https://www.linkedin.com/in/julian-adler-b114a8175/">Julian Adler</a>, whose soldering skills made the very first SentryBoxes possible.
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            <strong>So — what’s next?</strong>
+        </p>
+            <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
+          style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
+          class="blog-list-text">
+            No worries. The next product is already in planning, and the founder journey continues.
+
+          </p><br><br><br>‍<br></p>
       </div>
     </div>
   </section>
