Added good bye blog entry

--- a/en-us/blog-saying-goodbye/index.html
+++ b/en-us/blog-saying-goodbye/index.html
@@ -97,12 +97,11 @@
           <div class="blog-author-name">Benjamin&nbsp;Krüger</div>
           <div class="blog-date">January 12, 2026</div>
         </div><img class="blog-image"
-          src="/img/66a4eae5cfe90fbd90622650_Infrastructure.jpg"
+          src="/img/SentryBox_Good_Bye.jpg"
           alt="SentryBox Tech"
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
-          data-w-id="0167e223-aabd-1b06-d582-ec5ca2a92365" loading="lazy"
-          srcset="/img/66a4eae5cfe90fbd90622650_Infrastructure-p-500.jpg 500w, /img/66a4eae5cfe90fbd90622650_Infrastructure-p-800.jpg 800w, /img/66a4eae5cfe90fbd90622650_Infrastructure-p-1080.jpg 1080w, /img/66a4eae5cfe90fbd90622650_Infrastructure.jpg 1440w">
+          data-w-id="0167e223-aabd-1b06-d582-ec5ca2a92365" loading="lazy">
        
         <p data-w-id="46fb97d9-67aa-f21d-62c3-43ecc63feb3b"
           style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
@@ -155,7 +154,15 @@
           class="blog-list-text">
             No worries. The next product is already in planning, and the founder journey continues.
 
+            <img class="blog-image"
+          src="/img/whatsnext.jpg"
+          alt="SentryBox Tech"
+          style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
+          sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
+          data-w-id="0167e223-aabd-1b06-d582-ec5ca2a92365" loading="lazy">
           </p><br><br><br>‍<br></p>
+
+          
       </div>
     </div>
   </section>
