--- a/en-us/datenschutz/index.html
+++ b/en-us/datenschutz/index.html
@@ -89,7 +89,7 @@
   </div>
   <div class="w-layout-blockcontainer container-25 w-container">
     <h1 class="heading-17">Data policy</h1>
-    <p>1. Responsible Entity<br> &nbsp; Benjamin Krüger<br> &nbsp; BAM23 UG (limited liability)<br> &nbsp; Baltimora 11,
+    <p>1. Responsible Entity<br> &nbsp; Benjamin Krüger<br> &nbsp; Sentry Security GmbH<br> &nbsp; Baltimora 11,
       59379 Selm<br> &nbsp; Phone: +49 151 / 70531205<br> &nbsp; Email: hello@sentrybox.io<br> &nbsp; Website:
       www.sentrybox.io<br><br>2. Collection and Processing of Personal Data<br> &nbsp; 2.1. Cookies: Our website uses
       cookies to improve website usability. By using our website, you consent to the use of cookies. For more
